# so4-oracle

./: .gitignore  Cargo.toml  Dockerfile.apis  Makefile  README.md  docker-compose.yml  wrangler.toml
.github/workflows/: ci.yml
apis/: Cargo.toml
apis/src/: client.rs  config.rs  history.rs  lib.rs  main.rs  server.rs  state.rs
apis/tests/: api_tests.rs
contracts/src/: adl_handler.rs  config_handler.rs  deposit_vault.rs  fee_handler.rs  increase_position_utils.rs  keys.rs  lib.rs  liquidity_handler.rs  market_token.rs  order_handler.rs  pricing_utils.rs  reader.rs  referral_storage.rs  referral_utils.rs  types.rs
contracts/test_snapshots/: test_adl_full_close_reduces_pnl_factor.1.json  test_adl_oi_imbalance_high_pnl_factor_adl_reduces_it.1.json  test_adl_partial_close_reduces_pnl_factor.1.json  test_adl_rejected_when_pnl_factor_below_threshold.1.json  test_adl_rejected_when_position_not_profitable.1.json  test_claim_fees_reverts_when_nothing_to_claim.1.json  test_claim_fees_skips_zero_slots.1.json  test_claim_fees_transfers_zeroes_and_emits.1.json  test_claim_funding_fees_credits_account_and_zeroes_slot.1.json  test_claim_funding_fees_requires_account_auth.1.json  test_claim_funding_fees_reverts_when_nothing_to_claim.1.json  test_claim_ui_fees_handles_multiple_tokens.1.json  test_claim_ui_fees_returns_zero_when_nothing_pending.1.json  test_claim_ui_fees_skips_zero_entries.1.json  test_claim_ui_fees_transfers_and_zeroes_pending.1.json  test_concurrent_deposits_consistent_lp_and_price.1.json  test_double_initialize_panics.1.json  test_e2e_deposit_trade_withdraw_claim_fees.1.json  test_execute_withdrawal_full_pro_rata.1.json  test_get_account_orders_returns_empty_when_handler_has_none.1.json  test_get_account_positions_paginates_and_filters_closed_positions.1.json  test_get_account_withdrawals_filters_and_paginates.1.json  test_get_adl_targets_count_exceeds_positions.1.json  test_get_adl_targets_count_limits_results.1.json  test_get_adl_targets_sorted_by_pnl_desc.1.json  test_get_claimable_funding_reflects_storage.1.json  test_get_claimable_protocol_fee_reflects_storage.1.json  test_get_execution_price_balanced_oi_no_impact.1.json  test_get_execution_price_known_oi_state.1.json  test_get_fee_receiver_returns_initial_value.1.json  test_get_funding_info_defaults_when_unset.1.json  test_get_funding_info_returns_stored_values.1.json  (+27 more)
docs/: RISK_MECHANICS.md
oracle/: Cargo.toml
oracle/src/: binance.rs  coinbase.rs  config.rs  fixed.rs  keeper.rs  kv_store.rs  lib.rs  log.rs  price.rs  prices.rs  pyth.rs  signing.rs  stellar_rpc.rs  submit.rs  tx_builder.rs
oracle/tests/: mock_rpc_integration.rs  price_cycle_last_updated.rs  price_cycle_ledger_failure.rs  price_cycle_log_latency.rs  price_cycle_token_failure.rs
scripts/: build_contracts.sh  deploy_testnet.sh  fund_keeper.sh
(+18 files in other folders)
