[package]
name = "apis"
version = "0.1.0"
edition = "2021"
authors = ["ibrahimijai <sunday.m1701072@st.futminna.edu.ng>"]

[[bin]]
name = "apis"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
http = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
