[package]
name = "apis"
version = "0.1.0"
edition = "2021"
authors = ["ibrahimijai <sunday.m1701072@st.futminna.edu.ng>"]

[lints]
workspace = true

[[bin]]
name = "apis"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
futures = "0.3"
thiserror = "1.0"
once_cell = "1.17"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
tower = "0.5"
http = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
