[package]
name = "oracle"
version = "0.1.0"
edition = "2021"
authors = ["ibrahimijai <sunday.m1701072@st.futminna.edu.ng>"]

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-client = "0.5.6"
worker = { version = "0.8", features = ["http", "axum"] }
worker-macros = { version = "0.8", features = ["http"] }
axum = { version = "0.8", default-features = false, features = ["json"] }
tower-service = "0.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
ed25519-dalek = "2.1"
hex = "0.4"

[dev-dependencies]
futures = "0.3"
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
