[package]
name = "oracle"
version = "0.1.0"
edition = "2021"
authors = ["0xsteins"]

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "oracle"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2.1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
shared-config = { path = "../shared/config" }

[dev-dependencies]
futures = "0.3"
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
